<resources>
    <string name="app_name">ContactsApp</string>
    <string name="number">Add Number</string>
    <string name="call">CALL</string>
    <string name="tab_text_recent">RECENTS</string>
    <string name="tab_text_contacts">CONTACTS</string>
    <string name="tab_text_messages">MESSAGES</string>
    <string name="fab_dialpad">Dialpad Fab</string>
    <string name="recents_txt">You still didn\'t call anyone</string>
    <string name="contacts_tagline">Add New Contacts Here</string>
    <string name="messages_tagline">You can type a new message here</string>
    <string name="new_contact_text">New Contact</string>
    <string name="new_msg_text">New Message</string>
    <string name="dial_text">Dial</string>
    <string name="about_us_text">About Us</string>
    <string name="report_bug_text">Report Bug</string>
    <string name="donate_text">Donate</string>
    <string name="settings_text">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="asterisk">*</string>
    <string name="hash">#</string>
</resources>
