<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialpad_grid"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:columnCount="3">

    <Button
        android:text="@string/one"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/two"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/three"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>

    <Button
        android:text="@string/four"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/five"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/six"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>

    <Button
        android:text="@string/seven"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/eight"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>
    <Button
        android:text="@string/nine"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/grey"/>

    <Button
        android:text="@string/asterisk"
        android:textSize="35sp"
        android:padding="10sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/grey"
        android:layout_marginLeft="15dp" />

    <Button
        android:text="@string/zero"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_column="1"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/grey"
        android:layout_marginLeft="15dp" />

    <Button
        android:text="@string/hash"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/grey"
        android:layout_marginLeft="15dp" />

    <ImageButton
        android:layout_column="1"
        android:src="@drawable/ic_outline_call"
        android:layout_height="70dp"
        android:layout_width="80dp"
        android:contentDescription="@string/call"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/teal_200"/>


</GridLayout>

